--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "react-content-loader": "^2.0.0",
     "react-debounce-input": "^3.1.0",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
