--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "prop-types": "^15.6.0",
-    "react": "^15.5.4",
+    "react": "^16.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.0",
+    "react-test-renderer": "^16.2.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "jest-fetch-mock": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
